Opened 16 years ago

Closed 16 years ago

Last modified 16 years ago

#1737 closed bug (fixed)

DriveSetup shows extra empty partition with negative size

Reported by: andreasf Owned by: stippi
Priority: normal Milestone: R1
Component: Applications/DriveSetup Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I have a secondary IDE drive with MSDOS partitions 0 and 1, both BeFS, the rest is unused.

After today's changes, DriveSetup displays two empty partitions, one "29.3 GB", the other e.g. "-1730812172185196288 B". This is reproducible, the exact negative number has changed with every Rescan. When I select this disk on app startup, there is a small <empty> box on the left, then my two partitions and a large <empty> box. Selecting either of the two partitions in the list does not frame them in the graphic, neither can they be selected in the graphic. Displaying another disk does not reproducibly change the order; under unclear circumstances while running DriveSetup the graphical display order of the partitions changes, showing both a small <empty> and a large <empty> to the right.

Expected would be either no Empty list entries or only one, with positive size; in the graphic, one large <empty> box to the right.

Change History (3)

comment:1 by stippi, 16 years ago

Status: newassigned

Thank you for your report. DriveSetup is still under development. Before the last commit, it wouldn't show the empty space at all. I can reliably reproduce the additional partition with negative number here, it appears to be a bug in the "partitioning info" implementation inside the kernel. The other stuff you mention is just because DriveSetup is unfinished. But thanks anyways!

comment:2 by stippi, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev23824. I am closing the bug, since the rest of the problems reported are just because DriveSetup is WIP.

comment:3 by andreasf, 16 years ago

Sure, all of Haiku is WIP. :) Just trying to be helpful - not everyone would've noticed this in their setup, I assumed.

The negative size is gone now, it is now reproducibly 31.0 KB. Thanks for fixing.

Note: See TracTickets for help on using tickets.