* added a PrintToStream() method * added optional tracing for the main operations * fixed bad pointer arithmetic when reallocating/moving the object's data * it was impossible to remove the very first space via _RemoveSpaces() * added a little more variaty to error return codes for some   functions to make them a little more helpful

-> This fixes the bogus space values in DriveSetup (#1737)


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23824 a95241bf-73f2-0310-859d-f6bbb57e9c96